--- a/colors.html
+++ b/colors.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
+<meta charset="utf-8">
 <title>Colors and backgrounds</title>
-<link rel="stylesheet" href="style/default.css" type="text/css">
+<link rel="stylesheet" href="https://drafts.csswg.org/css2/style/default.css" type="text/css">
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/W3C-ED.css" type="text/css">
 <link rel="prev" href="page.html">
 <link rel="next" href="fonts.html">
@@ -11,7 +12,7 @@
 <link rel="CSS-properties" href="propidx.html" title="properties">
 <link rel="index" href="indexlist.html" title="index">
 <link rel="first" href="Overview.html">
-<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js"></script>
+<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js" async></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <style type="text/css">
@@ -22,6 +23,7 @@ span.insproposed,p.insproposed { text-decoration:underline }
 span.delproposed,span.delcurrent { text-decoration:line-through }
 body>del,body>ins {display:block}
 </style>
+<link href="custom.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="navbar">
