--- a/text.html
+++ b/text.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
+<meta charset="utf-8">
 <title>Text</title>
-<link rel="stylesheet" href="style/default.css" type="text/css">
+<link rel="stylesheet" href="https://drafts.csswg.org/css2/style/default.css" type="text/css">
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/W3C-ED.css" type="text/css">
 <link rel="prev" href="fonts.html">
 <link rel="next" href="tables.html">
@@ -11,7 +12,7 @@
 <link rel="CSS-properties" href="propidx.html" title="properties">
 <link rel="index" href="indexlist.html" title="index">
 <link rel="first" href="Overview.html">
-<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js"></script>
+<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js" async></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <meta http-equiv="Content-Style-Type" content="text/css">
@@ -31,6 +32,7 @@ body>del,body>ins {display:block}
 .egbidiwsaB { background:yellow;border:2px dotted white }
 .egbidiwsbC { border:2px dotted red }
 </style>
+<link href="custom.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="navbar">
