--- a/cover.html
+++ b/cover.html
@@ -2,18 +2,22 @@
 
 <html lang="en">
 
+<head>
+<meta charset="utf-8">
 <title>Cascading Style Sheets Level 2 Revision 2 (CSS&nbsp;2.2) Specification</title>
-<link rel="stylesheet" href="style/default.css" type="text/css">
+<link rel="stylesheet" href="https://drafts.csswg.org/css2/style/default.css" type="text/css">
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/W3C-ED.css" type="text/css">
 <link rel="next" href="about.html">
 <link rel="contents" href="cover.html#minitoc">
 <link rel="CSS-properties" href="propidx.html" title="properties">
 <link rel="index" href="indexlist.html" title="index">
 <link rel="first" href="cover.html">
-<script type="text/javascript" src="//www.w3.org/scripts/TR/2016/fixup.js"></script>
+<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js" async async></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!--script src="http://www.w3c-test.org/css/harness/annotate.js#CSS22_DEV" type="text/javascript" defer></script-->
 
+<link href="custom.css" rel="stylesheet" type="text/css">
+</head>
 <body>
 <div class="navbar">
 <p><a href="about.html">next</a> &nbsp;
@@ -111,7 +115,9 @@
   <hr title="Separator from Header">
 </div>
 
-<h2 id=abstract>Abstract</h2> 
+<p class="note ynote">本文中的注解是 Ivan Yan 的笔记，仅供参考，<a href="https://github.com/ynotes/css2/">编辑</a>。</p>
+
+<h2 id=abstract>Abstract</h2>
 
 <p>This specification defines Cascading Style Sheets level&nbsp;2. CSS
 is a style sheet language
