--- a/indexlist.html
+++ b/indexlist.html
@@ -2,17 +2,19 @@
 <html lang="en">
 
 <HEAD>
+<meta charset="utf-8">
 <TITLE>Index</TITLE>
-<link rel="stylesheet" href="style/default.css" type="text/css">
+<link rel="stylesheet" href="https://drafts.csswg.org/css2/style/default.css" type="text/css">
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/W3C-ED.css" type="text/css">
 <link rel="prev" href="leftblank.html">
 <link rel="contents" href="Overview.html#minitoc">
 <link rel="CSS-properties" href="propidx.html" title="properties">
 <link rel="index" href="indexlist.html" title="index">
 <link rel="first" href="Overview.html">
-<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js"></script>
+<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js" async></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<link href="custom.css" rel="stylesheet" type="text/css">
 </HEAD>
 <BODY>
 <div class="navbar">
