--- a/page.html
+++ b/page.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <HEAD>
+<meta charset="utf-8">
 <TITLE>Paged media</TITLE>
-<link rel="stylesheet" href="style/default.css" type="text/css">
+<link rel="stylesheet" href="https://drafts.csswg.org/css2/style/default.css" type="text/css">
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/W3C-ED.css" type="text/css">
 <link rel="prev" href="generate.html">
 <link rel="next" href="colors.html">
@@ -11,10 +12,11 @@
 <link rel="CSS-properties" href="propidx.html" title="properties">
 <link rel="index" href="indexlist.html" title="index">
 <link rel="first" href="Overview.html">
-<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js"></script>
+<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js" async></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-</HEAD> 
+<link href="custom.css" rel="stylesheet" type="text/css">
+</HEAD>
 
 <body>
 <div class="navbar">
@@ -96,7 +98,7 @@ the document.
 The canvas background is painted within and covers the page area.
 
 
-<li>The margin area, which surrounds the page area. 
+<li>The margin area, which surrounds the page area.
 The page margin area is transparent.
 </ul>
 
@@ -206,7 +208,7 @@ the first generated box.
 <p>If different declarations have been given for left and right pages,
 the user agent must honor these declarations even if the user agent
 does not transfer the page boxes to left and right sheets (e.g., a
-printer that only prints single-sided). 
+printer that only prints single-sided).
 
 <P>Authors may also specify style for the first page of a document
 with the <a name="x10"><span class="index-def"
@@ -264,7 +266,7 @@ boxes to honor the positioning of elements (e.g., you do not want to
 print 100 blank pages).
 
 <li>Authors should not position elements in inconvenient locations
-just to avoid rendering them. 
+just to avoid rendering them.
 
 <li>User agents may handle boxes positioned outside the page box in
 several ways, including discarding them or creating page boxes for
@@ -330,17 +332,17 @@ class="propinst-page-break-before">'page-break-before'</span></a>,
 
 <dl>
 <dt><strong>auto</strong></dt>
-<dd>Neither force nor forbid a page break before (after, inside) the 
+<dd>Neither force nor forbid a page break before (after, inside) the
 generated box.
 <dt><strong>always</strong></dt>
-<dd>Always force a page break before (after) the 
+<dd>Always force a page break before (after) the
 generated box.</dd>
 <dt><strong>avoid</strong></dt>
 <dd>Avoid a page break before (after, inside) the generated box.
 <dt><strong>left</strong></dt>
 <dd>
 Force one or two page breaks before
-(after) the generated box 
+(after) the generated box
 so that the next page is formatted as a left page.</dd>
 <dt><strong>right</strong></dt>
 <dd>
@@ -360,7 +362,7 @@ of the preceding element, and the <a href="page.html#propdef-page-break-before" 
 class="propinst-page-break-before">'page-break-before'</span></a> property
 of the following element.  When these properties have values other
 than 'auto', the values 'always', 'left', and 'right' take precedence
-over 'avoid'.  
+over 'avoid'.
 
 <p>User Agents must apply these properties to block-level elements
 in the normal flow of the root element. User agents may also apply
@@ -462,10 +464,10 @@ class="propinst-page-break-inside">'page-break-inside'</span></a> value of
 <li>
 <strong>Rule C:</strong> Breaking at (2) is allowed only if the number of <a
 href="visuren.html#line-box">line boxes</a> between the
-break and the start of the enclosing block box is 
+break and the start of the enclosing block box is
 the value of <a href="page.html#propdef-orphans" class="noxref"><span
 class="propinst-orphans">'orphans'</span></a> or more, and the number of
-line boxes between the break and the end of the box is 
+line boxes between the break and the end of the box is
 the value of <a href="page.html#propdef-widows" class="noxref"><span class="propinst-widows">'widows'</span></a> or more.
 
 <li><strong>Rule D:</strong> In addition, breaking at (2) or (3) is
@@ -506,8 +508,8 @@ the same height.
 <li>Avoid breaking inside a replaced element.
 </ul>
 
-<div class="example"><P style="display:none">Example(s):</P><P> 
-Suppose, for example, that the style sheet 
+<div class="example"><P style="display:none">Example(s):</P><P>
+Suppose, for example, that the style sheet
 contains 'orphans: 4', 'widows: 2', and
 there are 20 lines (<a href="visuren.html#line-box">line boxes</a>)
 available at the bottom of the current page:</p>
@@ -524,12 +526,12 @@ second part must contain exactly two lines
 
 <li>If the paragraph contains 23 lines or more, the first part should
 contain 20 lines and the second part the remaining lines.
-						    
+
 </ul>
 
 <P>Now suppose that <a href="page.html#propdef-orphans" class="noxref"><span class="propinst-orphans">'orphans'</span></a> is
 '10',
-<a href="page.html#propdef-widows" class="noxref"><span class="propinst-widows">'widows'</span></a> is '20', 
+<a href="page.html#propdef-widows" class="noxref"><span class="propinst-widows">'widows'</span></a> is '20',
 and there are 8 lines available at the bottom of the current page:</p>
 
 <ul>
@@ -538,7 +540,7 @@ and there are 8 lines available at the bottom of the current page:</p>
 fewer, it should be placed on the current page.
 
 <li>If the paragraph contains 9 lines or more, it cannot be split
-(that would violate the orphan constraint), so it should move 
+(that would violate the orphan constraint), so it should move
 as a block to the next page.
 </ul>
 </div>
