--- a/sample.html
+++ b/sample.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <HEAD>
+<meta charset="utf-8">
 <TITLE>Default style sheet for HTML 4</TITLE>
-<link rel="stylesheet" href="style/default.css" type="text/css">
+<link rel="stylesheet" href="https://drafts.csswg.org/css2/style/default.css" type="text/css">
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/W3C-ED.css" type="text/css">
 <link rel="prev" href="changes.html">
 <link rel="next" href="zindex.html">
@@ -11,9 +12,10 @@
 <link rel="CSS-properties" href="propidx.html" title="properties">
 <link rel="index" href="indexlist.html" title="index">
 <link rel="first" href="Overview.html">
-<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js"></script>
+<script type="text/javascript" src="https://www.w3.org/scripts/TR/2016/fixup.js" async></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<link href="custom.css" rel="stylesheet" type="text/css">
 </HEAD>
 <BODY>
 <div class="navbar">
